# mcp_todo

./: .gitignore  LICENSE  README.md
mini-mcp-client/: README.md  pyproject.toml
mini-mcp-client/src/mini_client/: __init__.py  cli.py
todo-mcp-server/: README.md  pyproject.toml
todo-mcp-server/docs/: MVP_SPEC.md
todo-mcp-server/src/todo_mcp/: __init__.py  dashboard.py  data.py  server.py
todo-mcp-server/src/todo_mcp/templates/: index.html
