# pyproject.toml — mini-mcp-client
# A minimal interactive MCP client for learning the protocol end-to-end.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mini-mcp-client"
version = "0.1.0"
description = "A minimal interactive MCP client. Launches any MCP server over stdio and lets you call its tools/resources/prompts from a REPL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Zhang Yu", email = "zhangyu200927@gmail.com" }
]

dependencies = [
    "mcp[cli]>=1.27,<2.0",
]


[project.scripts]
mini-mcp = "mini_client.cli:main"


[tool.hatch.build.targets.wheel]
packages = ["src/mini_client"]
