# pyproject.toml — todo-mcp-server
# Project manifest, see https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "todo-mcp-server"
version = "0.1.0"
description = "MCP server exposing todo CRUD + browser dashboard, backed by a shared .claude/todos.md"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Zhang Yu", email = "zhangyu200927@gmail.com" }
]

dependencies = [
    "mcp[cli]>=1.27,<2.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]


[project.scripts]
todo-mcp = "todo_mcp.server:main"


[tool.hatch.build.targets.wheel]
packages = ["src/todo_mcp"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
